syntax = "proto3";

package proto;

option java_package = "com.hedera.hashgraph.stablecoin.proto";
option java_multiple_files = true;

message ApproveExternalTransferTransactionData {
    string networkURI = 1;
    bytes to = 2;
    bytes amount = 3;
}
